--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: chores-contributor-server
     env: go
+    plan: free
     region: singapore  # ここを追加（asia側で最も近い）
     buildCommand: go build -o app ./cmd/server
     startCommand: ./app
+    healthCheckPath: /healthz
     envVars:
       - key: DATABASE_URL
         sync: false
