--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,17 @@ services:
     runtime: go
     plan: free
     region: singapore
-    buildCommand: go build -o app ./cmd/server
+    # ← どちらか片方でOK。両方書いても害はない
+    rootDir: .                         # 1) ルートを明示
+    buildCommand: |                    # 2) 念のため確実にcdしてからbuild
+      cd $RENDER_PROJECT_ROOT
+      go build -o app ./cmd/server
     startCommand: ./app
     healthCheckPath: /healthz
     envVars:
       - key: GOTOOLCHAIN
-        value: auto          # ← これを追加
-      - key: DATABASE_URL
+        value: auto                    # go1.25.4 を自動取得
+      - key: DATABASE_URL              # 例: postgres://.../postgres?sslmode=require
         sync: false
       - key: ADMIN_TOKEN
         sync: false
