--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Binaries
-server
+/server
 *.exe
 *.exe~
 *.dll
@@ -18,6 +18,7 @@ server
 # Environment
 .env
 .env.local
+.env.local.production
 
 # Database
 pgdata/
